[spi] take snapshot