@@ -3,17 +3,23 @@ package mdplayer.format;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
+
+import javax.sound.sampled.AudioFormat.Encoding;
 
 import dotnet4j.io.File;
 import dotnet4j.io.Path;
 import mdplayer.Common.EnmArcType;
 import mdplayer.PlayList;
 import mdplayer.driver.Vgm;
-import mdplayer.driver.nsf.Nsf;
+import mdplayer.driver.nsf.NsfDriver;
+import mdplayer.driver.nsf.NsfMdDriver2;
 import mdplayer.plugin.NSFPlugin;
 import mdplayer.plugin.Plugin;
 import mdplayer.properties.Resources;
+import vavi.sound.SoundUtil;
+import vavi.sound.sampled.md.MdEncoding;
 import vavi.util.archive.Archive;
 import vavi.util.archive.Entry;
 
@@ -35,11 +41,11 @@ public class NSFFileFormat extends BaseFileFormat {
     public List<PlayList.Music> getMusic(String file, byte[] buf, String zipFile /* = null */, Archive archive, Entry entry /* = null */) {
         List<PlayList.Music> musics = new ArrayList<>();
         PlayList.Music music = new PlayList.Music();
-        Nsf nsf = new Nsf();
-        Vgm.Gd3 gd3 = nsf.getGD3Info(buf);
+        NsfDriver nsf = new NsfMdDriver2();
+        Vgm.Gd3 gd3 = nsf.getGD3Info(buf, null);
 
         if (gd3 != null) {
-            for (int s = 0; s < nsf.songs; s++) {
+            for (int s = 0; s < nsf.getSongs(); s++) {
                 music = new PlayList.Music();
                 music.format = this;
                 music.fileName = file;
@@ -77,12 +83,12 @@ public class NSFFileFormat extends BaseFileFormat {
     public List<PlayList.Music> getMusic(PlayList.Music ms, byte[] buf, String zipFile /* = null */) {
         List<PlayList.Music> musics = new ArrayList<>();
         PlayList.Music music = new PlayList.Music();
-        Nsf nsf = new Nsf();
-        Vgm.Gd3 gd3 = nsf.getGD3Info(buf);
+        NsfDriver nsf = new NsfMdDriver2();
+        Vgm.Gd3 gd3 = nsf.getGD3Info(buf, null);
 
         if (gd3 != null) {
             if (ms.songNo == -1) {
-                for (int s = 0; s < nsf.songs; s++) {
+                for (int s = 0; s < nsf.getSongs(); s++) {
                     music = new PlayList.Music();
                     music.format = this;
                     music.fileName = ms.fileName;
@@ -162,7 +168,7 @@ public class NSFFileFormat extends BaseFileFormat {
         if (mc.songNo != -1) {
             PlayList.Music music;
             if (!musics.isEmpty()) {
-                music = musics.get(0);
+                music = musics.getFirst();
                 music.songNo = mc.songNo;
                 music.title = mc.title;
                 music.titleJ = mc.titleJ;
@@ -195,7 +201,7 @@ public class NSFFileFormat extends BaseFileFormat {
         if (mc.songNo != -1) {
             PlayList.Music music;
             if (!musics.isEmpty()) {
-                music = musics.get(0);
+                music = musics.getFirst();
                 music.songNo = mc.songNo;
                 music.title = mc.title;
                 music.titleJ = mc.titleJ;
@@ -208,5 +214,17 @@ public class NSFFileFormat extends BaseFileFormat {
         }
 
         return musics;
+    }
+
+    @Override
+    public int getMarkSize() {
+        return 0;
+    }
+
+    @Override
+    public boolean isSupported(InputStream is) {
+//        if (isCompressedStream(is)) return false;
+//        return Arrays.stream(getExtensions()).anyMatch(e -> java.nio.file.Path.of(SoundUtil.getSource(is)).toString().toLowerCase().endsWith(e));
+        return false;
     }
 }
