@@ -1,15 +1,14 @@
 package mdplayer.plugin;
 
 import java.lang.System.Logger;
-import java.lang.System.Logger.Level;
 
-import mdplayer.Audio;
 import mdplayer.Chip.Unused;
 import mdplayer.Common;
+import mdplayer.Common.EnmModel;
 import mdplayer.chips.Pcm8Chip;
+import mdplayer.chips.RealChipPlugin;
 import mdplayer.chips.Ym2151Chip;
-import mdplayer.driver.mxdrv.MXDRV;
-import mdplayer.format.FileFormat;
+import mdplayer.driver.mxdrv.MxDriver;
 import mdsound.Instrument;
 import mdsound.MDSound;
 import mdsound.MDSound.Chip;
@@ -24,7 +23,7 @@ import static mdsound.MDSound.Chip.MAIN_TAG;
 /**
  * MDXDRV (X68000) Plugin.
  * <p>
- * extendFiles[0]: pdx data bytes
+ * extendFile[0]: pdx data bytes
  *
  * @author <a href="mailto:umjammer@gmail.com">Naohide Sano</a> (nsano)
  * @version 0.00 2022-07-08 nsano initial version <br>
@@ -34,29 +33,23 @@ public class MDXPlugin extends BasePlugin {
     private static final Logger logger = getLogger(MDXPlugin.class.getName());
 
     @Override
-    public boolean play(String playingFileName, FileFormat format) {
-        audio.driverVirtual = new MXDRV();
-        ((MXDRV) audio.driverVirtual).extendFile = (extendFiles != null && !extendFiles.isEmpty()) ? extendFiles.get(0) : null;
-        audio.driverReal = null;
+    public void prepare() {
+        driverVirtual = new MxDriver();
+        ((MxDriver) driverVirtual).setExtendFile((extendFiles != null && !extendFiles.isEmpty()) ? extendFiles.getFirst() : null);
+
+        driverReal = null;
 //        if (setting.getOutputDevice().getDeviceType() != Common.DEV_Null) {
-//            audio.driverReal = new MXDRV();
-//            ((MXDRV) audio.driverReal).extendFiles = (extendFiles != null && !extendFiles.isEmpty()) ? extendFiles.get(0) : null;
+//            driverReal = new MxDriver();
+//            ((MxDriver) driverReal).extendFile = (extendFile != null && !extendFile.isEmpty()) ? extendFile.get(0) : null;
 //        }
-        prepare();
-        boolean r = _play();
-        if (!r) {
-logger.log(Level.WARNING, "cannot start: " + this);
-            return false;
-        }
-        super.play();
-        return true;
+
+        prepareInternal();
     }
 
-    /** */
-    private boolean _play() {
+    @Override
+    protected void initChips() {
         if (setting.getOutputDevice().getSampleRate() != 44100) {
-logger.log(Level.WARNING, "sample rate: " + setting.getOutputDevice().getSampleRate());
-            return false;
+            throw new IllegalStateException("supported sample rate is only 44100: " + setting.getOutputDevice().getSampleRate());
         }
 
         startTrdVgmReal();
@@ -65,7 +58,7 @@ logger.log(Level.WARNING, "sample rate: " + setting.getOutputDevice().getSampleR
 
         Chip chip = new MDSound.Chip();
         chip.id = 0;
-        chip.instrument = audio.chipRegister.chip(Ym2151Chip.class).instrument(0);
+        chip.instrument = chipRegister.chip(Ym2151Chip.class).instrument(0);
         chip.volume = setting.getBalance().getVolume(MAIN_TAG, Ym2151Chip.class);
         chip.clock = 4000000;
         if (chip.instrument instanceof X68kYm2151Inst) {
@@ -90,7 +83,7 @@ logger.log(Level.WARNING, "sample rate: " + setting.getOutputDevice().getSampleR
         mdxPCM_P.soundIocs[0] = new SoundIocs(mdxPCM_P.chips[0]);
 
         Pcm8PPInst pcm8pp = Instrument.getInstrument(Pcm8PPInst.class);
-        ((MXDRV) audio.driverVirtual).pcm8type = 0;
+        ((MxDriver) driverVirtual).setPcm8type(0);
         if (setting.getMxDrv().pcm8Type == 0) {
             // mxdrv is special and requires PCM8
         } else {
@@ -102,36 +95,36 @@ logger.log(Level.WARNING, "sample rate: " + setting.getOutputDevice().getSampleR
             chip.samplingRate = setting.getOutputDevice().getSampleRate();
             chip.option = new Object[] {setting.getMxDrv().pcm8ppsOption};
             put(Pcm8Chip.class, chip);
-            ((MXDRV) audio.driverVirtual).pcm8type = 1;
+            ((MxDriver) driverVirtual).setPcm8type(1);
         }
 
-        audio.chipLED.put("PriOPM", 1);
-        audio.chipLED.put("PriOKI5", 1);
+        chipLED.put("PriOPM", 1);
+        chipLED.put("PriOKI5", 1);
 
         hiyorimiNecessary = hiyorimiDeviceFlag == 0x3 && hiyorimiNecessary;
 
-        audio.mds.init(setting.getOutputDevice().getSampleRate(), Audio.BUFFER_SIZE, flatten());
+        mds.init(setting.getOutputDevice().getSampleRate(), BUFFER_SIZE, flatten());
 
-        audio.setVolume(MAIN_TAG, Ym2151Chip.class, true, setting.getBalance().getVolume(MAIN_TAG, Ym2151Chip.class));
+        setVolume(MAIN_TAG, Ym2151Chip.class, true, setting.getBalance().getVolume(MAIN_TAG, Ym2151Chip.class));
 
         if (contains(Ym2151Chip.class, 0))
-            audio.chipRegister.chip(Ym2151Chip.class).writeClock((byte) 0, 4000000, Common.EnmModel.RealModel);
-//            audio.chipRegister.chip(Ym2151Chip.class).writeClock(1, 4000000, enmModel.RealModel);
-        audio.chipRegister.chip(Ym2151Chip.class).getUse4MYM2151scci()[0] = false;
+            chipRegister.chip(Ym2151Chip.class).writeClock((byte) 0, 4000000, Common.EnmModel.RealModel);
+//            chipRegister.chip(Ym2151Chip.class).writeClock(1, 4000000, enmModel.RealModel);
+        chipRegister.chip(Ym2151Chip.class).getUse4MYM2151scci()[0] = false;
         if (setting.getYM2151Type()[0].getUseRealChipFreqDiff() != null
                 && setting.getYM2151Type()[0].getUseRealChipFreqDiff().length > 0
                 && setting.getYM2151Type()[0].getUseRealChipFreqDiff()[0]) {
-            audio.chipRegister.chip(Ym2151Chip.class).getUse4MYM2151scci()[0] = true;
+            chipRegister.chip(Ym2151Chip.class).getUse4MYM2151scci()[0] = true;
         }
 
-        audio.driverVirtual.setYm2151Hosei(4000000);
-        if (audio.driverReal != null) audio.driverReal.setYm2151Hosei(4000000);
-//        audio.chipRegister.chip(Ym2203Chip.class).setSsgVolume(0, setting.getBalance().getGimicOPNAVolume(), EnmModel.RealModel);
-//        audio.chipRegister.chip(Ym2203Chip.class).setSsgVolume(1, setting.getBalance().getGimicOPNAVolume(), EnmModel.RealModel);
-//        audio.chipRegister.chip(Ym2203Chip.class).setSsgVolume(0, setting.getBalance().getGimicOPNAVolume(), EnmModel.RealModel);
-//        audio.chipRegister.chip(Ym2203Chip.class).setSsgVolume(1, setting.getBalance().getGimicOPNAVolume(), EnmModel.RealModel);
+        chipRegister.chip(Ym2151Chip.class).setYm2151Hosei(EnmModel.VirtualModel, 4000000);
+        if (driverReal != null) chipRegister.chip(Ym2151Chip.class).setYm2151Hosei(EnmModel.RealModel, 4000000);
+//        chipRegister.chip(Ym2203Chip.class).setSsgVolume(0, setting.getBalance().getGimicOPNAVolume(), EnmModel.RealModel);
+//        chipRegister.chip(Ym2203Chip.class).setSsgVolume(1, setting.getBalance().getGimicOPNAVolume(), EnmModel.RealModel);
+//        chipRegister.chip(Ym2203Chip.class).setSsgVolume(0, setting.getBalance().getGimicOPNAVolume(), EnmModel.RealModel);
+//        chipRegister.chip(Ym2203Chip.class).setSsgVolume(1, setting.getBalance().getGimicOPNAVolume(), EnmModel.RealModel);
 
-        boolean retV = ((mdplayer.driver.mxdrv.MXDRV) audio.driverVirtual).init(
+        driverVirtual.init(
                 vgmBuf,
                 this,
                 Common.EnmModel.VirtualModel,
@@ -139,9 +132,8 @@ logger.log(Level.WARNING, "sample rate: " + setting.getOutputDevice().getSampleR
                 setting.getOutputDevice().getSampleRate() * setting.getLatencyEmulation() / 1000,
                 setting.getOutputDevice().getSampleRate() * setting.getOutputDevice().getWaitTime() / 1000,
                 mdxPCM_V, pcm8pp);
-        boolean retR = true;
-        if (audio.driverReal != null) {
-            retR = ((mdplayer.driver.mxdrv.MXDRV) audio.driverReal).init(
+        if (driverReal != null) {
+            driverReal.init(
                     vgmBuf,
                     this,
                     Common.EnmModel.RealModel,
@@ -150,13 +142,5 @@ logger.log(Level.WARNING, "sample rate: " + setting.getOutputDevice().getSampleR
                     setting.getOutputDevice().getSampleRate() * setting.getOutputDevice().getWaitTime() / 1000,
                     mdxPCM_R, pcm8pp);
         }
-
-        if (!retV || !retR) {
-            audio.errMsg = !audio.driverVirtual.errMsg.isEmpty() ? audio.driverVirtual.errMsg : (audio.driverReal != null ? audio.driverReal.errMsg : "");
-logger.log(Level.WARNING, "cannot start: " + audio.errMsg);
-            return false;
-        }
-
-        return true;
     }
 }
